# prisoners-arena-program

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  SECURITY.md
crates/match-logic/: Cargo.toml
crates/match-logic/src/: game.rs  lib.rs  pairing.rs  random.rs  strategy.rs  vm.rs  wasm.rs
programs/prisoners-arena/: Cargo.toml
programs/prisoners-arena/src/: error.rs  lib.rs  state.rs
programs/prisoners-arena/src/instructions/: admin.rs  mod.rs  player.rs  tournament.rs
