[package]
name = "prisoners-arena"
version = "0.1.0"
description = "Iterated Prisoner's Dilemma tournament on Solana"
edition = "2021"
license-file = "../../LICENSE"

[lib]
crate-type = ["cdylib", "lib"]
name = "prisoners_arena"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
testing = []

[dependencies]
anchor-lang = "0.32"
solana-security-txt = "1.1.1"
solana-sha256-hasher = "3.1"
match-logic = { path = "../../crates/match-logic" }
